Adds outline of io runtime

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+libc = "0.2"
+flume = "0.11"
+memmap2 = "0.9"
+io-uring = "0.7"
+thiserror = "2.0"
+
+[profile.release]
+debug = true
