--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ flume = "0.11"
 memmap2 = "0.9"
 io-uring = "0.7"
 thiserror = "2.0"
+core_affinity = "0.8"
+xxhash-rust = {version = "0.8", features = ["xxh3", "const_xxh3"]}
 
 [profile.release]
 debug = true
