--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,19 @@ name = "waldo"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+benchmark = ["dep:clap"]
+
+[[bin]]
+name = "bench_runtime"
+path = "src/benchmark/runtime.rs"
+required-features = ["benchmark"]
+
 [dependencies]
 libc = "0.2"
 memmap2 = "0.9"
 io-uring = "0.7"
 thiserror = "2.0"
 
-[profile.release]
-debug = true
+# For benchmark binaries.
+clap = { version = "4.5", optional = true, features = ["derive"] }
