--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,30 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-benchmark = ["dep:clap"]
+benchmark = ["dep:clap", "dep:tokio", "dep:anyhow"]
 
 [[bin]]
 name = "bench_runtime"
 path = "src/benchmark/runtime.rs"
 required-features = ["benchmark"]
 
+[[bin]]
+name = "bench_storage"
+path = "src/benchmark/storage.rs"
+required-features = ["benchmark"]
+
 [dependencies]
+flume = "0.12"
+io-uring = "0.7"
 libc = "0.2"
 memmap2 = "0.9"
-io-uring = "0.7"
+oneshot = { version = "0.1", features = ["async"] }
 thiserror = "2.0"
 
 # For benchmark binaries.
+anyhow = { version = "1.0", optional = true }
 clap = { version = "4.5", optional = true, features = ["derive"] }
+tokio = { version = "1.48", optional = true, features = ["full"] }
+
+[profile.bench]
+debug = true
