--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ memmap2 = "0.9"
 io-uring = "0.7"
 thiserror = "2.0"
 oneshot = { version = "0.1", features = ["async"] }
+bytemuck = { version = "1.24", features = ["derive"] }
 
 # For benchmark binaries.
 anyhow = { version = "1.0", optional = true }
