--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ flume = "0.12"
 memmap2 = "0.9"
 io-uring = "0.7"
 thiserror = "2.0"
+xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 oneshot = { version = "0.1", features = ["async"] }
 bytemuck = { version = "1.24", features = ["derive"] }
 
