--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ required-features = ["benchmark"]
 [dependencies]
 libc = "0.2"
 flume = "0.12"
+rayon = "1.11"
 memmap2 = "0.9"
 io-uring = "0.7"
 thiserror = "2.0"
