Phase 1 of the great refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ required-features = ["benchmark"]
 libc = "0.2"
 flume = "0.12"
 rayon = "1.11"
+assert2 = "0.3"
 memmap2 = "0.9"
 io-uring = "0.7"
 thiserror = "2.0"
