--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2024"
 benchmark = ["dep:clap", "dep:anyhow", "dep:indicatif", "dep:tokio"]
 
 [[bin]]
-name = "bench_runtime"
+name = "runtime"
 path = "src/benchmark/runtime.rs"
 required-features = ["benchmark"]
 
 [[bin]]
-name = "bench_storage"
+name = "storage"
 path = "src/benchmark/storage.rs"
 required-features = ["benchmark"]
 
@@ -31,6 +31,7 @@ bytemuck = { version = "1.24", features = ["derive"] }
 # For benchmark binaries.
 anyhow = { version = "1.0", optional = true }
 clap = { version = "4.5", optional = true, features = ["derive"] }
+indicatif = { version = "0.18", optional = true }
 tokio = { version = "1.48", optional = true, features = [
     "macros",
     "sync",
@@ -38,7 +39,6 @@ tokio = { version = "1.48", optional = true, features = [
     "rt-multi-thread",
     "time",
 ] }
-indicatif = { version = "0.18", optional = true }
 
 [profile.bench]
 debug = true
