--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ tokio = { version = "1.48", optional = true, features = [
     "time",
 ] }
 
+[dev-dependencies]
+anyhow = "1.0"
+proptest = "1.9"
+
 [profile.bench]
 debug = true
 inherits = "release"
