--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ required-features = ["benchmark"]
 libc = "0.2"
 flume = "0.12"
 rayon = "1.11"
+futures = "0.3"
 assert2 = "0.3"
 memmap2 = "0.9"
 io-uring = "0.7"
